# todo

./: .env  .gitignore  Makefile  README.md  create_todo_list.py  pyproject.toml  run_docker.sh  show_db.py  todo_web.py  utils.py
public/: index.html  todo_app.js
xpr/: tasks1.json
